The new export split normal does nor produce correct results. #37012

Closed
opened 2013-10-09 19:28:24 +02:00 by Paweł Łyczkowski · 5 comments

%%%--- Operating System, Graphics card ---

Windows 7

- Blender version with error, and version that worked ---

r60597

- Short description of error ---

The new export split normal does nor produce correct results.

This is how the split normals look using the "include normals" option - https://db.tt/mN7F2dYR

Export options used - https://db.tt/F4B7oIrn
Imported to 3ds max 2011 using these options - https://db.tt/RObjTGzk

This is how they should look - https://db.tt/8eAuecOe

Export options used - https://db.tt/3qP1Cpv3
Imported to 3ds max 2011 using these options - https://db.tt/2gunZHiD

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Attached is a zip with all the files needed to reproduce.

%%%

%%%--- Operating System, Graphics card --- Windows 7 - Blender version with error, and version that worked --- r60597 - Short description of error --- The new export split normal does nor produce correct results. This is how the split normals look using the "include normals" option - https://db.tt/mN7F2dYR Export options used - https://db.tt/F4B7oIrn Imported to 3ds max 2011 using these options - https://db.tt/RObjTGzk This is how they should look - https://db.tt/8eAuecOe Export options used - https://db.tt/3qP1Cpv3 Imported to 3ds max 2011 using these options - https://db.tt/2gunZHiD - Steps for others to reproduce the error (preferably based on attached .blend file) --- Attached is a zip with all the files needed to reproduce. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Hu, funny, I just across that bug today as well… Dummy error introduced while optimizing that code, fix is ready, will check against that file as well.%%%

%%%Hu, funny, I just across that bug today as well… Dummy error introduced while optimizing that code, fix is ready, will check against that file as well.%%%

%%%Fixed in r60639, thanks for the report! :)%%%

%%%Fixed in r60639, thanks for the report! :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%No problem, cheers : )%%%

%%%No problem, cheers : )%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37012
No description provided.